[workspace]
resolver = "2"
members = [ "macroquad_ex_ui", "input_lib", "srpg_game", "dungeoncrawl"]

[patch.crates-io]
miniquad = { git = 'https://github.com/Spector-Studios/miniquad.git', branch = "v0.4.6" }

[profile.dev]
opt-level = "z"

[profile.web-release]
inherits = "release"
strip = "debuginfo"
lto = "thin"
panic = 'unwind'
codegen-units = 8

[profile.android-release]
inherits = "release"
strip = "debuginfo"
lto = "thin"
panic = 'unwind'
codegen-units = 8
