[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2024"

[lib]
name = "dungeoncrawl"
crate-type = ["lib", "cdylib"]

[dependencies]
fastrand = "2.3.0"
input_lib = { version = "0.1.0", path = "crates/input_lib" }
macroquad = { version = "=0.4.13", features = ["backtrace"] }
getrandom = { version = "*", features = ["js"] }
bevy_ecs = { version = "0.16.0", features = ["configurable_error_handler"] }
strum = "0.27.1"
strum_macros = "0.27.1"
bracket-pathfinding = "0.8.7"
bevy_time = "0.16.0"
bevy_app = "0.16.1"
bevy_state = "0.16.1"
fnv = "1.0.7"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"

[workspace]
resolver = "3"
members = [ "crates/macroquad_ex_ui", "crates/input_lib"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.release]
strip = "debuginfo"
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = true
panic = 'unwind'
