[workspace]
resolver = "3"
members = [ "macroquad_ex_ui", "input_lib", "dungeoncrawl"]

[patch.crates-io]
miniquad = { git = 'https://github.com/Spector-Studios/miniquad.git', branch = "v0.4.6" }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = true
panic = 'unwind'
